[gd_scene load_steps=18 format=3 uid="uid://bqlcn30hs8qp5"]

[ext_resource type="Script" uid="uid://fhvnu4547w3e" path="res://scenes/startup_screen/startup_screen.gd" id="1_sgta6"]
[ext_resource type="Texture2D" uid="uid://sh8txndv1wtu" path="res://assets/startup_image.png" id="2_5viva"]
[ext_resource type="Texture2D" uid="uid://cwv5gaisvmwv7" path="res://icon.svg" id="3_gatud"]
[ext_resource type="Texture2D" uid="uid://c35rwqbeqmush" path="res://assets/icons/settings.svg" id="4_80ee3"]
[ext_resource type="Texture2D" uid="uid://npglkea55x8p" path="res://assets/icons/link.svg" id="5_pcyft"]
[ext_resource type="Texture2D" uid="uid://8yvgi81apxxg" path="res://assets/icons/open.svg" id="6_j711k"]
[ext_resource type="Texture2D" uid="uid://c2okxbuwsvak2" path="res://assets/icons/add.svg" id="7_4kk3e"]
[ext_resource type="Texture2D" uid="uid://c8ydairucfdee" path="res://assets/icons/guide.svg" id="8_wn5y3"]
[ext_resource type="Texture2D" uid="uid://bbuw3ew0x2ghk" path="res://assets/icons/video_guide.svg" id="9_ncffq"]
[ext_resource type="Texture2D" uid="uid://d34rtkurt6qhl" path="res://assets/icons/sponsors.svg" id="10_1nlba"]
[ext_resource type="Texture2D" uid="uid://qin4ceo74nw6" path="res://assets/icons/support.svg" id="11_0i7o8"]
[ext_resource type="Texture2D" uid="uid://brw0l3u8bd2bb" path="res://assets/sponsors/vgj.webp" id="12_xyrqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2wpv"]
content_margin_left = 20.0
content_margin_right = 18.0
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="LabelSettings" id="LabelSettings_x2wpv"]
font_size = 13

[sub_resource type="Animation" id="Animation_5plxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/TopHBox/TimerLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["5"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/VBox/StartupTabContainer:current_tab")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox/CloseSponsorsButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/TopHBox/TimerLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_donii"]
resource_name = "show_sponsors"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/TopHBox/TimerLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.03333, 2.03333, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", ""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/VBox/StartupTabContainer:current_tab")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox/CloseSponsorsButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.23333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/VBox/StartupTabContainer/Sponsors/TopHBox/TimerLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5plxg"]
_data = {
&"RESET": SubResource("Animation_5plxg"),
&"show_sponsors": SubResource("Animation_donii")
}

[node name="StartupPanel" type="PanelContainer" node_paths=PackedStringArray("version_label", "new_version_available_panel", "new_version_available_button", "tab_container", "recent_projects_vbox", "animation_player", "project_path_line_edit", "resolution_x_spinbox", "resolution_y_spinbox", "framerate_spinbox", "warning_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"overlay_background"
script = ExtResource("1_sgta6")
version_label = NodePath("Panel/VBox/StartupImage/OverlayHBox/VersionLabel")
new_version_available_panel = NodePath("Panel/VBox/StartupImage/UpdateAvailablePanel")
new_version_available_button = NodePath("Panel/VBox/StartupImage/UpdateAvailablePanel/HBoxContainer/RepoTextureButton")
tab_container = NodePath("Panel/VBox/StartupTabContainer")
recent_projects_vbox = NodePath("Panel/VBox/StartupTabContainer/MainMenu/VBox/RecentProjectsScroll/RecentProjectsVBox")
animation_player = NodePath("AnimationPlayer")
project_path_line_edit = NodePath("Panel/VBox/StartupTabContainer/NewProject/PathHBox/PathLineEdit")
resolution_x_spinbox = NodePath("Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox/ResolutionXSpinBox")
resolution_y_spinbox = NodePath("Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox/ResolutionYSpinBox")
framerate_spinbox = NodePath("Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/FramerateSpinBox")
warning_label = NodePath("Panel/VBox/StartupTabContainer/NewProject/NewProjectWarningLabel")
metadata/_edit_lock_ = true

[node name="Panel" type="PanelContainer" parent="."]
clip_children = 2
custom_minimum_size = Vector2(600, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="StartupImage" type="TextureRect" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
texture = ExtResource("2_5viva")
expand_mode = 1
stretch_mode = 6

[node name="GoZenLogoButton" type="TextureButton" parent="Panel/VBox/StartupImage"]
layout_mode = 1
offset_left = 7.0
offset_top = 7.0
offset_right = 47.0
offset_bottom = 47.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_gatud")
ignore_texture_size = true
stretch_mode = 5

[node name="EditorSettingsButton" type="TextureButton" parent="Panel/VBox/StartupImage"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 0
tooltip_text = "button_tooltip_editor_settings"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_80ee3")
ignore_texture_size = true
stretch_mode = 5

[node name="OverlayHBox" type="HBoxContainer" parent="Panel/VBox/StartupImage"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="VersionLabel" type="RichTextLabel" parent="Panel/VBox/StartupImage/OverlayHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 9
text = "Version: "
scroll_active = false
vertical_alignment = 2

[node name="ImageAuthor" type="RichTextLabel" parent="Panel/VBox/StartupImage/OverlayHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "Image by [url=https://unsplash.com/photos/photo-of-mountain-u27Rrbs9Dwc][u]Clay Banks[/u][/url]"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[node name="UpdateAvailablePanel" type="PanelContainer" parent="Panel/VBox/StartupImage"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x2wpv")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBox/StartupImage/UpdateAvailablePanel"]
layout_mode = 2

[node name="UpdateAvailableLabel" type="Label" parent="Panel/VBox/StartupImage/UpdateAvailablePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "notification_update_available"
label_settings = SubResource("LabelSettings_x2wpv")

[node name="RepoTextureButton" type="TextureButton" parent="Panel/VBox/StartupImage/UpdateAvailablePanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture_normal = ExtResource("5_pcyft")
ignore_texture_size = true
stretch_mode = 5

[node name="StartupTabContainer" type="TabContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 2
tabs_visible = false

[node name="MainMenu" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecentProjectsLabel" type="Label" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "title_recent_projects"

[node name="HSeparatorTop" type="HSeparator" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2

[node name="RecentProjectsScroll" type="ScrollContainer" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecentProjectsVBox" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox/RecentProjectsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparatorBottom" type="HSeparator" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2

[node name="OpenProjectButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_open_project"
icon = ExtResource("6_j711k")
flat = true
alignment = 0
expand_icon = true

[node name="CreateProjectButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/VBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_create_new_project"
icon = ExtResource("7_4kk3e")
flat = true
alignment = 0
expand_icon = true

[node name="MenuVBox" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GettingStartedLabel" type="Label" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "title_getting_started"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2

[node name="SiteButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_gozen_site"
icon = ExtResource("5_pcyft")
flat = true
alignment = 0
expand_icon = true

[node name="ManualButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_manual"
icon = ExtResource("8_wn5y3")
flat = true
alignment = 0
expand_icon = true

[node name="TutorialsButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_tutorials"
icon = ExtResource("9_ncffq")
flat = true
alignment = 0
expand_icon = true

[node name="DiscordServerButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_discord_server"
icon = ExtResource("5_pcyft")
flat = true
alignment = 0
expand_icon = true

[node name="Spacer" type="Control" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ViewSponsorsButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_view_sponsors"
icon = ExtResource("10_1nlba")
flat = true
alignment = 0
expand_icon = true

[node name="SupportProjectButton" type="Button" parent="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "button_support_gozen"
icon = ExtResource("11_0i7o8")
flat = true
alignment = 0
expand_icon = true

[node name="NewProject" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="NewProjectLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "title_new_project"

[node name="HSeparator1" type="HSeparator" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2

[node name="PathHBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject/PathHBox"]
layout_mode = 2
text = "text_path"

[node name="PathLineEdit" type="LineEdit" parent="Panel/VBox/StartupTabContainer/NewProject/PathHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProjectPathButton" type="TextureButton" parent="Panel/VBox/StartupTabContainer/NewProject/PathHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_j711k")
ignore_texture_size = true
stretch_mode = 5

[node name="NewProjectGrid" type="GridContainer" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ResolutionLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "text_resolution"

[node name="ResolutionHBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox"]
layout_mode = 2
text = "X:"

[node name="ResolutionXSpinBox" type="SpinBox" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The video width."
mouse_default_cursor_shape = 1
min_value = 1.0
value = 1.0
allow_greater = true

[node name="YLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox"]
layout_mode = 2
text = "Y:"

[node name="ResolutionYSpinBox" type="SpinBox" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid/ResolutionHBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The video height."
mouse_default_cursor_shape = 1
min_value = 1.0
value = 1.0
allow_greater = true

[node name="FramerateLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "text_framerate"
metadata/_edit_lock_ = true

[node name="FramerateSpinBox" type="SpinBox" parent="Panel/VBox/StartupTabContainer/NewProject/NewProjectGrid"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The video framerate (fps)."
mouse_default_cursor_shape = 1
min_value = 1.0
value = 1.0
allow_greater = true

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2

[node name="NewProjectWarningLabel" type="Label" parent="Panel/VBox/StartupTabContainer/NewProject"]
visible = false
layout_mode = 2
theme_type_variation = &"warning_label"

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/NewProject"]
layout_mode = 2

[node name="CancelCreateProjectButton" type="Button" parent="Panel/VBox/StartupTabContainer/NewProject/HBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "button_return"

[node name="CreateNewProjectButton" type="Button" parent="Panel/VBox/StartupTabContainer/NewProject/HBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "button_tooltip_create_new_project"
mouse_default_cursor_shape = 2
text = "button_create_new_project"

[node name="Sponsors" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer"]
layout_mode = 2
theme_override_constants/separation = 20
metadata/_tab_index = 2

[node name="TopHBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/Sponsors"]
layout_mode = 2

[node name="SponsoredByLabel" type="Label" parent="Panel/VBox/StartupTabContainer/Sponsors/TopHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"title_label"
text = "title_sponsors"

[node name="TimerLabel" type="Label" parent="Panel/VBox/StartupTabContainer/Sponsors/TopHBox"]
visible = false
layout_mode = 2
theme_type_variation = &"title_label"
text = "5"

[node name="SponsorsHBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/Sponsors"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VGJ" type="VBoxContainer" parent="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox"]
layout_mode = 2
alignment = 1

[node name="Logo" type="TextureRect" parent="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox/VGJ"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("12_xyrqg")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox/VGJ"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Voylin's Gamedev Journey"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox/VGJ"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "GoZen creator"
horizontal_alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="Panel/VBox/StartupTabContainer/Sponsors"]
layout_mode = 2
alignment = 2

[node name="BecomeSponsorButton" type="Button" parent="Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox"]
layout_mode = 2
text = "button_become_sponsor"

[node name="CloseSponsorsButton" type="Button" parent="Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "button_close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5plxg")
}

[connection signal="pressed" from="Panel/VBox/StartupImage/GoZenLogoButton" to="." method="_on_go_zen_logo_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupImage/EditorSettingsButton" to="." method="_on_editor_settings_button_pressed"]
[connection signal="meta_clicked" from="Panel/VBox/StartupImage/OverlayHBox/ImageAuthor" to="." method="_on_image_author_meta_clicked"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/VBox/OpenProjectButton" to="." method="_on_open_project_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/VBox/CreateProjectButton" to="." method="_on_create_project_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/SiteButton" to="." method="_on_site_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/ManualButton" to="." method="_on_manual_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/TutorialsButton" to="." method="_on_tutorials_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/DiscordServerButton" to="." method="_on_discord_server_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/ViewSponsorsButton" to="." method="_on_view_sponsors_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/MainMenu/MenuVBox/SupportProjectButton" to="." method="_on_support_project_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/NewProject/PathHBox/ProjectPathButton" to="." method="_on_project_path_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/NewProject/HBox/CancelCreateProjectButton" to="." method="_on_cancel_create_project_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/NewProject/HBox/CreateNewProjectButton" to="." method="_on_create_new_project_button_pressed"]
[connection signal="gui_input" from="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox/VGJ/Logo" to="." method="_on_sponsor_logo_input" binds= ["vgj"]]
[connection signal="gui_input" from="Panel/VBox/StartupTabContainer/Sponsors/SponsorsHBox/VGJ/NameLabel" to="." method="_on_sponsor_name_input" binds= ["vgj"]]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox/BecomeSponsorButton" to="." method="_on_become_sponsor_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StartupTabContainer/Sponsors/ButtonHBox/CloseSponsorsButton" to="." method="_on_close_sponsors_button_pressed"]
